force-app/main/default/objects/ContentVersion/fields/FIN_Contract_ID__c.field-meta.xml
<CustomField>
    <fullName>FIN_Contract_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract ID</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Content Versions</relationshipLabel>
    <relationshipName>Content_Versions</relationshipName>
    <type>Lookup</type>
</CustomField>