force-app/main/default/objects/ContentVersion/fields/FIN_EndDate__c.field-meta.xml
<CustomField>
    <fullName>FIN_EndDate__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>