force-app/main/default/objects/ContentVersion/fields/FIN_SettlementSchedule__c.field-meta.xml
<CustomField>
    <fullName>FIN_SettlementSchedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Settlement Schedule</label>
    <referenceTo>FIN_SettlementSchedule__c</referenceTo>
    <relationshipLabel>Content Versions</relationshipLabel>
    <relationshipName>Content_Versions</relationshipName>
    <type>Lookup</type>
</CustomField>