force-app/main/default/objects/ContentVersion/fields/FIN_Status__c.field-meta.xml
<CustomField>
    <fullName>FIN_Status__c</fullName>
    <formula>IF (
    ISBLANK(FIN_StartDate__c) &amp;&amp; ISBLANK(FIN_EndDate__c),
    IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;green&quot;) + &apos; Active&apos;,
    IF (
        NOT(ISBLANK(FIN_StartDate__c)) &amp;&amp; NOT(ISBLANK(FIN_EndDate__c)) &amp;&amp; TODAY()&lt;= FIN_EndDate__c &amp;&amp; TODAY()&gt;= FIN_StartDate__c,
        IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;green&quot;) + &apos; Active&apos;,
        IF (
            NOT(ISBLANK(FIN_StartDate__c)) &amp;&amp; ISBLANK(FIN_EndDate__c) &amp;&amp; TODAY()&gt;= FIN_StartDate__c,
            IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;green&quot;) + &apos; Active&apos;,
            IF (
                NOT(ISBLANK(FIN_EndDate__c)) &amp;&amp; ISBLANK(FIN_StartDate__c) &amp;&amp; TODAY()&lt;= FIN_EndDate__c,
                IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;green&quot;) + &apos; Active&apos;, IMAGE(&apos;/img/samples/flag_red.gif&apos;, &apos;red&apos;) + &apos; Inactive&apos;)
        )
    )
)</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>