force-app/main/default/objects/ContentVersion/recordTypes/General.recordType-meta.xml
<RecordType>
    <fullName>General</fullName>
    <active>true</active>
    <description>To enable the possibility to fill a required fields.</description>
    <label>General</label>
</RecordType>