force-app/main/default/objects/ContentVersion/validationRules/CorrectDateInputs.validationRule-meta.xml
<ValidationRule>
    <fullName>CorrectDateInputs</fullName>
    <active>false</active>
    <description>End Date must be after Start Date</description>
    <errorConditionFormula>IF (ISNULL(FIN_StartDate__c),true,FIN_StartDate__c  &gt; FIN_EndDate__c)</errorConditionFormula>
    <errorDisplayField>FIN_EndDate__c</errorDisplayField>
    <errorMessage>End Date must be after Start Date.</errorMessage>
</ValidationRule>